2024-09-04T01:35:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10693522655 # 408
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-04
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 408 798 / 414 804
* notice: next accum: outdated-unq outdated-all / unq all: 409 799 / 414 804
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-21] / []

2024-09-03T01:34:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10675104717 # 407
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-03
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 407 797 / 413 803
* notice: next accum: outdated-unq outdated-all / unq all: 408 798 / 414 804
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-08-19] / [2024-09-02]

2024-09-02T01:36:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10659258668 # 406
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-02
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 407 797 / 412 802
* notice: next accum: outdated-unq outdated-all / unq all: 407 797 / 413 803
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-01]

2024-08-29T01:34:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10607139426 # 402