@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-04T01:35:17Z",
-  "count_outdated" : 799,
-  "uniques_outdated" : 409,
+  "timestamp" : "2024-09-05T01:35:27Z",
+  "count_outdated" : 800,
+  "uniques_outdated" : 410,
   "count" : 804,
   "uniques" : 414,
   "clones" : [
-    {
-      "timestamp": "2024-08-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-08-23T00:00:00Z",
       "count": 1,
