@@ -1,3 +1,12 @@
+2024-09-05T01:35:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10712300637 # 409
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-05
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 409 799 / 414 804
+* notice: next accum: outdated-unq outdated-all / unq all: 410 800 / 414 804
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-08-22] / []
+
 2024-09-04T01:35:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10693522655 # 408
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-04
